--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@babel/preset-env": "^7.25.7",
     "@babel/preset-react": "^7.25.7",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.2",
     "axios": "^1.7.7",
     "babel-loader": "^9.2.1",
@@ -31,5 +33,8 @@
     "UI library"
   ],
   "author": "TrendTrade",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.25.7"
+  }
 }
