--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "trendtrade-widget": "^1.0.0",
+    "trendtrade-widget": "^1.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,5 +38,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.25.7",
+    "@babel/core": "^7.25.7",
+    "@babel/preset-env": "^7.25.7",
+    "@babel/preset-react": "^7.25.7"
   }
 }
