fix issue with css

--- a/.npmignore
+++ b/.npmignore
@@ -1,4 +1,23 @@
-src/
-node_modules/
-webpack.config.js
-.babelrc
+# Exclude source files
+/src
+
+# Exclude local configuration
+/.babelrc
+/webpack.config.js
+
+# Exclude node_modules
+/node_modules
+
+# Exclude test files and directories
+/tests
+/__tests__
+/test
+/spec
+/*.test.js
+/*.spec.js
+
+# Exclude miscellaneous files
+/.DS_Store
+/npm-debug.log*
+/yarn-debug.log*
+/yarn-error.log*
