--- a/package.json
+++ b/package.json
@@ -1,41 +1,36 @@
 {
   "name": "trendtrade-widget",
-  "version": "1.0.4",
-  "description": "NPM Library to display trends with details using API.",
+  "version": "1.1.10",
   "main": "dist/index.js",
+  "scripts": {
+    "build:js": "babel src --out-dir dist"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/tungmt/trendtrade-widget"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/material": "^6.1.2",
-    "axios": "^1.7.7",
-    "babel-loader": "^9.2.1",
-    "react": "^18.3.1",
-    "webpack": "^5.95.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0"
-  },
-  "peerDependencies": {
-    "react": ">=16.8.0"
-  },
-  "scripts": {
-    "build": "babel src --out-dir dist --copy-files",
-    "start": "webpack serve --mode development"
+    "url": "git+https://github.com/tungmt/trendtrade-widget.git"
   },
   "keywords": [
-    "trends",
-    "API",
-    "UI library"
+    "trend",
+    "trade",
+    "ai",
+    "market"
   ],
-  "author": "TrendTrade",
+  "author": "tungmt",
   "license": "ISC",
-  "devDependencies": {
+  "bugs": {
+    "url": "https://github.com/tungmt/trendtrade-widget/issues"
+  },
+  "homepage": "https://github.com/tungmt/trendtrade-widget#readme",
+  "description": "",
+  "dependencies": {
     "@babel/cli": "^7.25.7",
     "@babel/core": "^7.25.7",
     "@babel/preset-env": "^7.25.7",
-    "@babel/preset-react": "^7.25.7"
-  }
+    "@babel/preset-react": "^7.25.7",
+    "babel-plugin-react-css-modules": "^5.2.6",
+    "dayjs": "^1.11.13",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {}
 }
